Texto real en eventos y calendario con detalle al regresar de calendario

--- a/WebContent/views/web/calendario.zul
+++ b/WebContent/views/web/calendario.zul
@@ -49,7 +49,7 @@
 						style="width: 100%; background-color: #d9eb52; margin-top: 0px !important; padding: 4px 0px !important">
 						<n:h6
 							style="color:#87796f; font-family: Roboto,sans-serif !important; font-weight: bold;">
-							BINGO
+							Carrera 10K y Caminata 6K Fanca 2016
 						</n:h6>
 					</div>
 					<div sclass="row">
@@ -61,7 +61,7 @@
 									02/05/2016
 									<n:br></n:br>
 									<n:b>Lugar:</n:b>
-									Hotel Príncipe
+									Centro Comercial Sambil
 									<n:br></n:br>
 									<n:b>Dirección:</n:b>
 									Carrera 23 entre calles 15 y 16
@@ -92,22 +92,9 @@
 						<div sclass="col s12" align="justify">
 							<div sclass="row">
 								<label>
-									Lorem ipsum dolor sit amet, consectetur
-									adipisicing elit, sed do eiusmod. Lorem
-									ipsum dolor sit amet, consectetur
-									adipisicing elit, sed do eiusmod. Lorem
-									ipsum dolor sit amet, consectetur
-									adipisicing elit, sed do eiusmod.Lorem ipsum dolor sit amet, consectetur
-									adipisicing elit, sed do eiusmod. Lorem
-									ipsum dolor sit amet, consectetur
-									adipisicing elit, sed do eiusmod. Lorem
-									ipsum dolor sit amet, consectetur
-									adipisicing elit, sed do eiusmod.Lorem ipsum dolor sit amet, consectetur
-									adipisicing elit, sed do eiusmod. Lorem
-									ipsum dolor sit amet, consectetur
-									adipisicing elit, sed do eiusmod. Lorem
-									Lorem ipsum dolor sit amet, consectetur
-									adipisicing elit, sed do eiusmod. Lorem
+									Las inscripciones serán a través de la página web mirunning.net y algunos puntos manuales como colegios y el Sambil. Estas iniciarán la primera semana de marzo y tendrán costos desde 700 a 900 bolívares, según las diferentes etapas de pago.
+
+En el evento se premiará primer, segundo y tercer lugar masculino y femenino con doce, diez, y ocho mil bolívares, respectivamente. Los ganadores de las ocho categorías, que van desde niños hasta adultos mayores de 65 años, recibirán un trofeo.
 								</label>
 							</div>
 							<div sclass="row center-align" style="margin-bottom:0pc">
